# CPP-Learn

./: .gitignore  CLION_SETUP_GUIDE.md  CMakeLists.txt  CPPLearn.code-workspace  README.md  SETUP_COMPLETE.md  VISUAL_GUIDE.md  main.cpp  submission.cpp  test_setup.cpp  verify_setup.bat
01_Arrays/: array_basics.cpp  array_searching.cpp  array_sorting.cpp  collection_sorting.cpp  matrix_operations.cpp
02_Functions/: banking_system.cpp  temperature_converter.cpp  temperature_converter_v2.cpp
03_Data/: book_management.cpp  student_class.cpp
04_Conditionals/: calculator.cpp  grade_calculator.cpp  shipping_cost.cpp  student_performance.cpp
05_Mathematical/: exponential_series.cpp  sine_series.cpp
06_Recursion/: directory_traversal.cpp  staircase_problem.cpp  staircase_problem_v2.cpp
07_Structure/: Structure.c
08_Pointers/: 2DArray.cpp  DanglingPointer.cpp  DynamicCalc.c  DynamicString.c  EmployeeRecordEditor.c  PhoneDirectory.c  SimpleConfigCalc.c
09_FileHandling/: AttendanceLog.cpp  DeleteEmployee.cpp  EmployeeSlip.cpp  StudentRecord.cpp  Studentmarks.cpp
10_Preprocessor/: AdvanceMacros.cpp  OS.cpp  config.h  debug_toggle.cpp  debugifdef.cpp  debugpractice.cpp  demo_file1.cpp  demo_file2.cpp  demo_header.h  env_example.cpp  environment_config.cpp  file2.c  myheader.h  platform.h  pragma.cpp  test_version.cpp  version_control.cpp  vesionconfig.cpp
11_OOPS/: AccessSpecifier.cpp  CopyConstructor.cpp  Destructors.cpp  InlinevsMacros.cpp  StaticDemo.cpp  StuctANDclass.cpp  Task3Constructor.cpp  ThisPointer.cpp  mutablekeyword.cpp
12_Memory/: ArrayPointer.cpp  Delete[].cpp  MemoryLeak.cpp  MemoryLeakTest.cpp  MemoryLeakinLoop.cpp  New[]anddelete[].cpp
Auction-System-main/: .gitignore  Dockerfile  Procfile  README.md  build.sh  pom.xml  render.yaml  start.sh
Module1/01_Arrays/: DoubleDelete.c  DoubleDelete.cpp  array_basics.cpp  array_searching.cpp  array_sorting.cpp  collection_sorting.cpp  matrix_operations.cpp
Module1/02_Functions/: banking_system.cpp  temperature_converter.cpp  temperature_converter_v2.cpp
Module1/03_Data/: book_management.cpp  student_class.cpp
Module1/04_Conditionals/: calculator.cpp  grade_calculator.cpp  shipping_cost.cpp  student_performance.cpp
Module1/05_Mathematical/: exponential_series.cpp  sine_series.cpp
Module1/06_Recursion/: directory_traversal.cpp  staircase_problem.cpp
Module1/07_Structure/: Structure.c
Module1/08_Pointers/: 2DArray.cpp  DanglingPointer.cpp  DynamicCalc.c  DynamicScorecard.c  DynamicString.c  EmployeeRecordEditor.c  PhoneDirectory.c  PointerBasics.c  SimpleConfigCalc.c
Module1/09_FileHandling/: AttendanceLog.cpp  DeleteEmployee.cpp  EmployeeSlip.cpp  StudentRecord.cpp  Studentmarks.cpp
Module1/10_Preprocessor/: HeaderGaurd.cpp  OS.cpp  debug.h  debug_toggle.cpp  debugifdef.cpp  demo_main.cpp  env.h  environment_config.cpp  file1.c  platform.h  pragma.cpp  version_control.cpp
Module2/11_OOPS/: AccessSpecifier.cpp  CopyConstructor.cpp  Destructors.cpp  InlinevsMacros.cpp  StaticDemo.cpp  Task3Constructor.cpp  ThisPointer.cpp  mutablekeyword.cpp
Module2/12_Memory/: ArrayPointer.cpp  Delete[].cpp  MemoryLeak.cpp  MemoryLeakTest.cpp  MemoryLeakinLoop.cpp  New[]anddelete[].cpp
Module2/13_Encapsulation/: BankAccount.cpp  Student.cpp  Student.h  Temerature.cpp  main.cpp
Module2/14_Abstraction/: Car.cpp  Payment.cpp  Shape.cpp  tempCodeRunnerFile.cpp
Module2/15_Inheritance/: COMPARISON_CHART.md  Character.cpp  DIAMOND_PROBLEM_README.md  DiamondInheritance.cpp  DiamondProblem.cpp  DocumentMultilevel.cpp  EmployeePayroll.cpp  HierachicalInhertance.cpp  MultiLevelInheritance.cpp  SETUP_COMPLETE.md  SingleInheritance.cpp  VirtualInheritanceTask2.cpp  tempCodeRunnerFile.cpp
Module2/16_Polymorphism/: EmployeePayroll.cpp  OperatorOverload.cpp  ShapeHierarchy.cpp  SimpleClalc.cpp  VirtualFuncDefaultParam.cpp
Module2/17_VitualInheritance/: BaseLogger.cpp  LivingBeing.cpp  Payment.cpp  VirtualInheritanceTask1.cpp  VirtualInheritanceTask2.cpp  VirtualInheritanceTask3.cpp
Module3/16_Polymorphism/: FractionOverload.cpp  Matrix.cpp  Messenger.cpp  VirtualFuncDefaultParam.cpp
Module3/17_VitualInheritance/: MediaPlayer.cpp  ShapeHierarchy.cpp  Teacher.cpp  VirtualInheritanceTask2.cpp
Module4/18_IOStreams/: Task1BasicInputOutput.cpp  Task2FormattingOutput.cpp  Task3ReadingWriting.cpp  Task4CopyfileContent.cpp  Task5OverLoadStream.cpp  Task6FileI&O.cpp  Task7StreamState.cpp  Task8ChainingStreamOperations.cpp  Task9Logging.cpp
Module4/19_FriendClass/: Task1FriendFunction.cpp  Task2FriendClassforCollaboration.cpp  Task3FriendFunctionwithTwoClasses.cpp
Module4/20_Exceptions/: Task1ExceptionBasics.cpp  Task2CatchHandler.cpp  Task3CustomException.cpp  Task4BankSystem.cpp  Task5StackUnwinding.cpp  Task6Mem0ryLeak.cpp  Task7RobustBank.cpp
Module5/21_VariadicTemplates/: Task1VariadicTemplate.cpp  Task2MyTuple.cpp  Task3SumAll.cpp  Task4ForwardingArgs.cpp  Task5Pitfall.cpp
Module5/22_Namespace/: Task1BasicNamespace.cpp  Task2NamespaceAlias.cpp  Task3BasicFunctionTemplate.cpp  Task4ClassTemplateBasics.cpp  Task5TemplateSpecialization.cpp  Task6TemplatewithDefaultParameter.cpp  Task7TemplateTypeDeduction.cpp
Module6/23_AutoKeyword/: Task10ConstructorwithInitializerList.cpp  Task11CombiningAutowithInitializerList.cpp  Task12NestedInitializerLists.cpp  Task13AutowithFunctionsReturningContainers.cpp  Task14PitfallswithautoandReferenceTypes.cpp  Task15CombiningAllConcepts.cpp  Task1BasicAutoType.cpp  Task2AutowithExpressions.cpp  Task3AutowithPointersandReferences.cpp  Task4AutoinLoops.cpp  Task5RangebasedLoops.cpp  Task6RangeBasedAutowithRefernce.cpp  Task7AutoinLoppswithConst.cpp  Task8RangeBasedLoopwithStructuredBindings.cpp  Task9BasicInitializerList.cpp
Module6/24_CallBackFunction/: Task10LambdaasCallback.cpp  Task11LambdawithMutableKeyword.cpp  Task12LambdawithDefaultArguments.cpp  (+12 more)
Notes/: ALL_MODULES_INTERVIEW_QA.md  CPPLearn.code-workspace  INTERVIEW_1WEEK_PLAN.md  MODULES_1_TO_6_OVERVIEW.md  README.md  SIMPLIFICATION_COMPLETE.md
misc/: ArrayTask3  task2.1.c  task3.1.c  task4.3_grade.c  test.cpp
(+141 files in other folders)
